feat(master): add chinese bible

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,5 +3,9 @@
 @import "~taro-ui/dist/style/components/grid.scss";
 @import "~taro-ui/dist/style/components/icon.scss";
 @import "~taro-ui/dist/style/components/article.scss";
+@import "~taro-ui/dist/style/components/tabs.scss";
+@import "~taro-ui/dist/style/components/tab-bar.scss";
+@import "~taro-ui/dist/style/components/badge.scss";
+@import "~taro-ui/dist/style/components/message.scss";
 // @import '~taro-ui/dist/style/index.scss' // 全局引入一次即可
 // @import "~taro-ui/dist/style/index.scss"; // 引入组件样式 - 方式二
