--- a/src/pages/books/index.sass
+++ b/src/pages/books/index.sass
@@ -1,3 +1,14 @@
-.at-article__p {
-  white-space: pre-wrap;
+.book-detail {
+  .at-article {
+    padding-bottom: 100rpx;
+    .at-article__p {
+      white-space: pre-wrap;
+    }
+  }
+  .book-tab-bar {
+    padding: 0px;
+    bottom: 20rpx;
+    padding-bottom:14rpx;
+    opacity: 0.75;
+  }
 }
