feat(master): add chinese bible

--- a/src/pages/books/index.sass
+++ b/src/pages/books/index.sass
@@ -6,9 +6,12 @@
     }
   }
   .book-tab-bar {
-    padding: 0px;
-    bottom: 20rpx;
-    padding-bottom:14rpx;
+    padding: 20rpx;
+    bottom: 0rpx;
     opacity: 0.75;
+    background-color: #f1e5c9;
+  }
+  .at-tab-bar__item--active {
+    font-weight: bold;
   }
 }
