--- a/src/pages/contents/index.sass
+++ b/src/pages/contents/index.sass
@@ -1,5 +1,6 @@
 .books-contents {
 
+  padding-top: 44rpx;
   .books-classify {
     text-align: center;
     margin: 20px 0 20px;
@@ -20,5 +21,28 @@
     .at-list__item-content {
       margin-right: 0;
     }
+  }
+  .at-tabs {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    background-color: #f1e5c9;
+    z-index: 100;
+    height: 90rpx;
+  }
+  .at-grid {
+    margin-top: 40rpx;
+  }
+  .at-drawer__content {
+    background-color: #f1e5c9;
+    .at-list__item {
+      background-color: #f1e5c9;  
+      .item-content__info-note {
+        color: #333;
+      }
+      .item-extra__icon-arrow {
+        color: #666;
+      }
+    }  
   }
 }
