feat(master): 翻页手势修改

--- a/src/app.scss
+++ b/src/app.scss
@@ -19,6 +19,9 @@ page {
 .at-tabs__header {
   background-color: #f1e5c9;
 }
+.hidden {
+  display: none;
+}
 
 /* Custom Theme */
 // $color-brand: #e93b3d;
