feat(master): bible update

--- a/src/app.scss
+++ b/src/app.scss
@@ -8,6 +8,10 @@
 @import "~taro-ui/dist/style/components/tab-bar.scss";
 @import "~taro-ui/dist/style/components/badge.scss";
 @import "~taro-ui/dist/style/components/message.scss";
+@import "~taro-ui/dist/style/components/radio.scss";
+@import "~taro-ui/dist/style/components/icon.scss";
+@import "~taro-ui/dist/style/components/flex.scss";
+@import "~taro-ui/dist/style/components/slider.scss";
 
 // @import '~taro-ui/dist/style/index.scss' // 全局引入一次即可
 // @import "~taro-ui/dist/style/index.scss"; // 引入组件样式 - 方式二
@@ -21,6 +25,9 @@ page {
 }
 .hidden {
   display: none;
+}
+.text-center {
+  text-align: center;
 }
 
 /* Custom Theme */
