feat(master): bible update

--- a/src/pages/books/index.scss
+++ b/src/pages/books/index.scss
@@ -33,7 +33,8 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
+      width: 80%;
+      margin: 0 auto;
       height: 30px;
     }
     .audio-control {
